Fixed folder spacing

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -70,6 +70,7 @@ span.folder-actions, span.bookmark-actions {
 
 ul.folders {
     padding: 0;
+    margin: 0;
 }
 
 li.folder {
